--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "mongoose": "6.4.6",
     "morgan": "1.9.0",
     "pug": "3.0.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.6",
+    "jest": "^28.1.3"
   }
 }
