--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "dependencies": {
     "cookie-parser": "1.4.6",
@@ -18,6 +25,8 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
-    "jest": "^28.1.3"
+    "cross-env": "^7.0.3",
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4"
   }
 }
