--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
     "start": "node ./bin/www",
     "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage"
   },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  },
   "dependencies": {
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
@@ -21,12 +15,14 @@
     "mongodb": "4.8.0",
     "mongoose": "6.4.6",
     "morgan": "1.9.0",
-    "pug": "3.0.2"
+    "pug": "3.0.2",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.6",
-    "cross-env": "^7.0.3",
-    "jest": "^28.1.3",
-    "supertest": "^6.2.4"
+    "@types/jest": "28.1.6",
+    "cross-env": "7.0.3",
+    "jest": "28.1.3",
+    "mongodb-memory-server": "^8.9.1",
+    "supertest": "6.2.4"
   }
 }
