--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@types/jest": "28.1.6",
+    "@types/jest": "^29.0.1",
     "cross-env": "7.0.3",
     "jest": "28.1.3",
     "mongodb-memory-server": "^8.9.1",
